# zendesk-rag-pipeline

./: .env.example  .gitignore  Dockerfile  README.md  ingest_one.py  main.py  playground.ipynb  pyproject.toml  requirements.txt  test_article.html
data/md_test/: 4404590815635-how-to-set-up-saml-20-with-optisigns-and-okta.md  48241081473043-operational-schedule-troubleshooting.md
services/: chunk.py  converter.py  crawler.py  state_store_gcs.py  uploader.py
