[project]
name = "zendesk-rag-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncio>=4.0.0",
    "beautifulsoup4>=4.14.3",
    "google-cloud-storage>=3.8.0",
    "html5lib>=1.1",
    "markdownify>=1.2.2",
    "requests>=2.32.5",
]
